Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-45211

Lots of "Slow scheduling for NON_IO task" reported

    XMLWordPrintable

Details

    • Triaged
    • 1
    • Yes
    • KV-Engine 2021-March

    Description

      From looking at the logs for the run of http://perf.jenkins.couchbase.com/job/titan/10497/console I see a ton of

      2021-03-23T13:58:30.245346-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool5. Schedule overhead: 5766 ms
      2021-03-23T13:58:30.265358-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool5. Schedule overhead: 5786 ms
      2021-03-23T13:58:30.285386-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool7. Schedule overhead: 5806 ms
      2021-03-23T13:58:30.305414-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool2. Schedule overhead: 5826 ms
      2021-03-23T13:58:30.325438-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool5. Schedule overhead: 5846 ms
      2021-03-23T13:58:30.345469-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool1. Schedule overhead: 5866 ms
      2021-03-23T13:58:30.365488-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool1. Schedule overhead: 5886 ms
      2021-03-23T13:58:30.385500-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool1. Schedule overhead: 5906 ms
      2021-03-23T13:58:30.405517-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool1. Schedule overhead: 5926 ms
      2021-03-23T13:58:30.425549-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool1. Schedule overhead: 5946 ms
      2021-03-23T13:58:30.445562-07:00 WARNING (No Engine) Slow scheduling for NON_IO task 'Eph tombstone stale item deleter' on thread NonIoPool1. Schedule overhead: 5966 ms
      

      The schedule overhead slowly increase until it get up to the 20 second range and then it falls down again. My guess is that this is a task which backs off and reschedules itself and runs multiple times but don't reset the schedule time after it snooze itself which is causing the increase until the task finally completes (Note: this is just a wild speculation)

      Priority set to critical as it must be fixed prior to the release of CC (severity minor)

      Attachments

        For Gerrit Dashboard: MB-45211
        # Subject Branch Project Status CR V

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty